:bug: feature/SRM-186 Fix sidebar height on small screens

--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -18,7 +18,7 @@
 .menu {
     background-color: rgb(33, 37, 41);
     color: rgb(169, 175, 187);
-    height: 100vh;
+    height: 100%;
     width: $sidebar-ancho;
     position: fixed;
     top: 0;
